--- a/esp8266_dht22.yaml
+++ b/esp8266_dht22.yaml
@@ -1,13 +1,13 @@
 substitutions:
   # https://esphome.io/guides/configuration-types.html#substitutions
-  device_name: esp8266_dht22
-  friendly_name: ESP8266 DHT22
-  ip_address: !secret esp8266_dht22_ip
+  device_name: basement_climate
+  friendly_name: Basement
+  ip_address: !secret basement_climate_ip
 
 
 esphome:
-  # https://esphome.io/components/esphomeyaml
-  name: ${device_name}
+  # https://esphome.io/components/esphome
+  name: $device_name
   platform: ESP8266
   board: nodemcuv2
 
@@ -17,7 +17,7 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   manual_ip:
-    static_ip: ${ip_address}
+    static_ip: $ip_address
     gateway: !secret wifi_gateway
     subnet: !secret wifi_subnet
     dns1: !secret wifi_dns1
@@ -26,7 +26,7 @@ wifi:
     
 # web_server:
 #   port: 80
-  # https://esphomelib.com/esphomeyaml/components/web_server.html
+  # https://esphome.io/components/web_server.html
 
 
 logger:
@@ -47,9 +47,9 @@ ota:
 sensor:
   - platform: dht
     # https://esphome.io/components/sensor/dht.html
-    pin: D1   # GPIO5
+    pin: D1  # GPIO5
     temperature:
-      name: ${friendly_name} Temperature
+      name: $friendly_name Temperature
       filters:
         - offset: -1.5
         - filter_nan:
@@ -60,10 +60,10 @@ sensor:
             send_first_at: 1
         - lambda: return x * (9.0/5.0) + 32.0;  # convert Celsius to Fahrenheit
       unit_of_measurement: "°F"
-      # icon: "mdi:thermometer"   # gets thermometer icon by default
-      # accuracy_decimals: 1      # gets 1 decimal by default
+      # icon: "mdi:temperature-fahrenheit"  # gets thermometer icon by default
+      # accuracy_decimals: 0  # gets 1 decimal by default
     humidity:
-      name: ${friendly_name} Humidity
+      name: $friendly_name Humidity
       filters:
         - filter_nan:
         - heartbeat: 15s
@@ -71,7 +71,7 @@ sensor:
             window_size: 2
             send_every: 2
             send_first_at: 1
-      # icon: "mdi:water-percent" # gets water-percent icon by default
-      accuracy_decimals: 1        # gets 0 decimals by default
-    model: AM2302                 # dht22 (attached board w/3 pins)
+      # icon: "mdi:water"  # gets water-percent icon by default
+      accuracy_decimals: 1  # gets 0 decimals by default
+    model: AM2302  # dht22 (attached board w/3 pins)
     update_interval: 10s
