--- a/esp8266_dht22.yaml
+++ b/esp8266_dht22.yaml
@@ -6,8 +6,8 @@ substitutions:
 
 
 esphome:
-  # https://esphome.io/components/esphome
-  name: $device_name
+  # https://esphome.io/components/esphomeyaml
+  name: ${device_name}
   platform: ESP8266
   board: nodemcuv2
 
@@ -17,17 +17,16 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   manual_ip:
-    static_ip: $ip_address
+    static_ip: ${ip_address}
     gateway: !secret wifi_gateway
     subnet: !secret wifi_subnet
     dns1: !secret wifi_dns1
-    dns2: !secret wifi_dns2
 
     
 # web_server:
 #   port: 80
-  # https://esphome.io/components/web_server.html
-
+  # https://esphomelib.com/esphomeyaml/components/web_server.html
+  
 
 logger:
   # https://esphome.io/components/logger
@@ -36,12 +35,11 @@ logger:
 api:
   password: !secret esphome_api_password
   # https://esphome.io/components/api
-
+  
 
 ota:
   password: !secret esphome_ota_password
   # https://esphome.io/components/ota
-
 
 
 sensor:
@@ -49,21 +47,21 @@ sensor:
     # https://esphome.io/components/sensor/dht.html
     pin: D1  # GPIO5
     temperature:
-      name: $friendly_name Temperature
+      # https://esphome.io/components/sensor/index.html#config-sensor
+      name: ${friendly_name} Temperature
       filters:
-        - offset: -1.5
         - filter_nan:
         - heartbeat: 15s
         - sliding_window_moving_average:
             window_size: 2
             send_every: 2
             send_first_at: 1
-        - lambda: return x * (9.0/5.0) + 32.0;  # convert Celsius to Fahrenheit
+        - lambda: return ( ( x * (9.0/5.0) ) + 32.0);  # convert Celsius to Fahrenheit
       unit_of_measurement: "°F"
       # icon: "mdi:temperature-fahrenheit"  # gets thermometer icon by default
       # accuracy_decimals: 0  # gets 1 decimal by default
     humidity:
-      name: $friendly_name Humidity
+      name: ${friendly_name} Humidity
       filters:
         - filter_nan:
         - heartbeat: 15s
